Update WorldTemperatureConfig to not use arrays